# bp_ecg_raw_extractor

./: .env.example  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
dags/: bp_ecg_raw_extractor_dag.py
src/bp_ecg_raw_extractor/: __init__.py  config.py  main.py  metrics.py
src/bp_ecg_raw_extractor/decompressor/: __init__.py  zstd_reader.py
src/bp_ecg_raw_extractor/dedup/: __init__.py  store.py
src/bp_ecg_raw_extractor/image_proc/: __init__.py  crop.py  roi.py
src/bp_ecg_raw_extractor/ocr/: __init__.py  paddle_ocr.py
src/bp_ecg_raw_extractor/pdf_parser/: __init__.py  pdfplumber_parser.py
src/bp_ecg_raw_extractor/processing/: __init__.py  file_processor.py
src/bp_ecg_raw_extractor/schema/: __init__.py  dataframe.py
src/bp_ecg_raw_extractor/storage/: __init__.py  minio_client.py
src/bp_ecg_raw_extractor/writer/: __init__.py  iceberg_writer.py
tests/: conftest.py  test_decompressor.py  test_image_proc.py  test_main.py  test_ocr.py  test_pdf_parser.py  test_schema.py  test_storage.py  test_writer.py
