[project]
name = "bp_ecg_raw_extractor"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aioboto3>=13.0",
    "zstandard>=0.22",
    "Pillow>=10.0",
    "pdfplumber>=0.11",
    "polars>=0.20",
    "pyarrow>=16.0",
    "pyiceberg[s3fs]>=0.7",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20",
    "pandera[polars]>=0.20",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle>=2.6",
    "paddleocr>=2.7",
]
ocr-gpu = [
    # Use instead of 'ocr' when a CUDA-capable GPU is available.
    # Run container with: docker run --gpus all ...
    "paddlepaddle-gpu>=2.6",
    "paddleocr>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.0",
    "moto[s3]>=5.0",
    "ruff>=0.4",
    "pyrefly>=0.1",
    "reportlab>=4.0",
    "numpy>=1.24",
    "taskipy>=1.12",
    "bandit[toml]>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bp_ecg_raw_extractor"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.pyrefly]
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.uv]
# Lock only for the target runtime environment (Linux + Python 3.12 — Docker containers).
# Avoids resolution failures for packages (e.g. paddlepaddle) that have no wheels on
# other platforms or Python versions.
environments = [
    "sys_platform == 'linux' and python_version == '3.12'",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.taskipy.tasks]
lint       = { cmd = "ruff check .",                                   help = "Run ruff linter" }
fmt        = { cmd = "ruff format .",                                  help = "Auto-format with ruff" }
fmt-check  = { cmd = "ruff format --check .",                          help = "Check formatting (no writes)" }
typecheck  = { cmd = "pyrefly",                                        help = "Run pyrefly type checker" }
bandit     = { cmd = "bandit -r src/ -c pyproject.toml",               help = "Run Bandit SAST" }
test       = { cmd = "pytest",                                         help = "Run test suite" }
ci         = { cmd = "task lint && task fmt-check && task typecheck && task bandit && task test", help = "Full CI gate" }
